--- a/templates/cloudpushrecorder.mustache
+++ b/templates/cloudpushrecorder.mustache
@@ -1,3 +1,3 @@
-<div id="speechcards_pushrecorder" data-id="speechcards_pushrecorder" class="wordcards-poodllrecorder" data-parent="{{wwwroot}}" data-type="push" data-width="240" data-height="80" data-id="speechcards_widget" data-appid="mod_wordcards" data-media="audio"
-  data-speechevents="1" data-language="{{language}}" data-transcribe="0" data-transcribe="1" data-region="{{region}}"  data-owner="{{owner}}" data-localloader="/mod/wordcards/poodllloader.html" data-token="{{cloudpoodlltoken}}">
+<div id="speechcards_pushrecorder" data-id="speechcards_pushrecorder" class="wordcards-poodllrecorder" data-parent="{{wwwroot}}" data-type="push" data-width="240" data-height="80" data-appid="mod_wordcards" data-media="audio"
+  data-speechevents="1" data-language="{{language}}" data-transcribe="0" data-transcode="0" data-region="{{region}}" data-hints="{{hints}}"  data-owner="{{owner}}" data-localloader="/mod/wordcards/poodllloader.html" data-token="{{cloudpoodlltoken}}">
 </div>
