--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -37,8 +37,8 @@
   </div>
 
   <div class="page-footer">
-    <button data-href="{{{nexturl}}}" class="continue-button btn btn-primary btn-lg btn-block">
-        Continue <i class="fa fa-arrow-right"></i> 
+    <button data-href="{{{nexturl}}}" data-action="{{nextaction}}" class="definitions-next btn btn-primary btn-lg btn-block">
+        {{nextbuttontext}}  <i class="fa fa-arrow-right"></i>
       </button>
     <small>{{noteaboutseenforteachers}}</small>
       <audio id="poodll_vocabplayer"></audio>
