fixed scope unsafe  CSS/ID declarations (https://github.com/justinhunt/moodle-mod_wordcards/issues/6) and added better instructions and help icons

--- a/templates/feedback.mustache
+++ b/templates/feedback.mustache
@@ -12,11 +12,11 @@
 
 <div id="try-again-or-next">
 
-  <button style="width:50%;float:left;" id="try-again" class="btn btn-danger btn-lg">
+  <button style="width:50%;float:left;" id="wordcards-try-again" class="btn btn-danger btn-lg">
     <i class="fa fa-refresh"></i> {{#str}}try_again, mod_wordcards{{/str}}
   </button>
 
-  <button style="width:50%;float:left;" id='close-results' class='btn btn-primary btn-lg'>
+  <button style="width:50%;float:left;" id='wordcards-close-results' class='btn btn-primary btn-lg'>
     {{#str}}done, mod_wordcards{{/str}} <i class='fa fa-arrow-right'></i>
   </button>
 
