--- a/templates/speechcards_page.mustache
+++ b/templates/speechcards_page.mustache
@@ -1,17 +1,17 @@
-<div id='vocab-list'>
+<div id='wordcards-vocab-list'>
   {{> mod_wordcards/vocablist_header}}
   <div id="vocab-list-inner">{{> mod_wordcards/loading}}</div>
 </div>
 
-<div id='gameboard'>
+<div id='wordcards-gameboard'>
 
   <div class="mod_wordcards_activity_header">
     <h3>{{#str}}title_speechcards, mod_wordcards{{/str}}</h3>
     <div class="mod_wordcards_instructions">{{#str}}instructions_speechcards, mod_wordcards{{/str}}</div>
   </div>
 
-  <div id='counter'>
-    <div id='time-counter'></div>
+  <div id='wordcards-counter'>
+    <div id='wordcards-time-counter'></div>
   </div>
 
   {{> mod_wordcards/progress_dots}}
@@ -28,7 +28,7 @@
 
     </div>
 
-    <div id="star-rating">
+    <div id="wordcards-star-rating">
     </div>
 
     {{> mod_wordcards/cloudpushrecorder}}
@@ -43,6 +43,6 @@
 
 </div>
 
-<div id='results'>
+<div id='wordcards-results'>
   <div id='results-inner'>{{> mod_wordcards/loading}}</div>
 </div>
