--- a/templates/vocablist.mustache
+++ b/templates/vocablist.mustache
@@ -27,6 +27,6 @@
   
 </div>
 
-<button id='start-button' class='btn btn-success btn-lg center-block btn-block'>
+<button id='wordcards-start-button' class='btn btn-success btn-lg center-block btn-block'>
   <i class='fa fa-play'></i> {{#str}}starttest, mod_wordcards{{/str}}
 </button>
