--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -1,47 +1,49 @@
 {{! Terms are organised as follows:
-
 <div class="term-wrapper">
-  <div class="term">
-    <div class="term-header">
-      <div class="term-title"></div>
-      <div class="term-tick"></div>
-    </div>
-    <div class="term-body"></div>
-  </div>
-</div>
-
-}}
-
-<div id="definitions-page-{{uniqid}}" class="definitions-container">
-
-  <h3 class="text-center font-weight-bold" style="border-radius:10px;background-color:lightgray;padding:5px;margin-bottom:10px">Check all the words to continue:</h3>
-
-  <div class="terms clearfix">
-    {{#definitions}}
-    <div class="term-wrapper">
-      <div class="term {{#seen}}term-seen{{/seen}}" data-termid="{{id}}">
-        <div class="term-header">
-          <div class="term-title">{{term}} <i style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}" class="fa fa-volume-up definition-play-tts"></i></div>
-          <div class="term-tick">
-            <a href="#" class="term-seen-action" title="{{markasseen}}"><img src="{{{notseenurl}}}" alt="{{termnotseen}}" /></a>
-            <div class="term-seen-state"><img src="{{{seenurl}}}" alt="{{termseen}}" /></div>
-            <div class="term-seen-loading"><img src="{{loadingurl}}" alt="{{loading}}"></div>
-          </div>
-        </div>
-        <div class="term-body">
-          {{definition}}
-        </div>
+   <div class="term">
+      <div class="term-header">
+         <div class="term-title"></div>
+         <div class="term-tick"></div>
       </div>
-    </div>
-    {{/definitions}}
-  </div>
-
-  <div class="page-footer">
-    <button data-href="{{{nexturl}}}" data-action="{{nextaction}}" class="definitions-next btn btn-primary btn-lg btn-block">
-        {{nextbuttontext}}  <i class="fa fa-arrow-right"></i>
+      <div class="term-body"></div>
+   </div>
+</div>
+}}
+<div id="definitions-page-{{uniqid}}" class="definitions-container">
+   <h3 class="text-center font-weight-bold" style="border-radius:10px;background-color:lightgray;padding:5px;margin-bottom:10px">Check all the words to continue:</h3>
+   <div class="terms clearfix">
+      {{#definitions}}
+      <div class="term-wrapper">
+         <div class="term {{#seen}}term-seen{{/seen}}" data-termid="{{id}}">
+            <div class="term-header">
+               <div class="term-title">{{term}} <i style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}" class="fa fa-volume-up definition-play-tts"></i></div>
+               <div class="term-tick">
+                  <a href="#" class="term-seen-action" title="{{markasseen}}"><img src="{{{notseenurl}}}" alt="{{termnotseen}}" /></a>
+                  <div class="term-seen-state"><img src="{{{seenurl}}}" alt="{{termseen}}" /></div>
+                  <div class="term-seen-loading"><img src="{{loadingurl}}" alt="{{loading}}"></div>
+               </div>
+            </div>
+           <div class="term-header">
+               <div>
+                  <span style="cursor:pointer;" data-modelaudio="{{model_sentence_audio}}" data-tts="{{model_sentence}}" data-ttsvoice="{{ttsvoice}}" class="model-sentence-play-tts"> {{model_sentence}}</span>
+               </div>
+            </div>
+            <div class="term-header">
+               <div class="term-title"></div>
+            </div>
+           
+			  <div class="term-body">
+               {{definition}} 
+            </div>
+         </div>
+      </div>
+      {{/definitions}}
+   </div>
+   <div class="page-footer">
+      <button data-href="{{{nexturl}}}" data-action="{{nextaction}}" class="definitions-next btn btn-primary btn-lg btn-block">
+      {{nextbuttontext}}  <i class="fa fa-arrow-right"></i>
       </button>
-    <small>{{noteaboutseenforteachers}}</small>
+      <small>{{noteaboutseenforteachers}}</small>
       <audio id="poodll_vocabplayer"></audio>
-  </div>
-
+   </div>
 </div>
