tweaks to get keyboard working on iOS

--- a/templates/keyboard.mustache
+++ b/templates/keyboard.mustache
@@ -1,4 +1,4 @@
-<div id='chunk-input' data-id='"+id+"' class='noselect'>
+<div id='chunk-input' data-id='{{dataid}}' class='noselect'>
   
   <div id='chunk-typed'>
     <div id='chunk-typed-inner'></div>
