--- a/templates/speechcards_page.mustache
+++ b/templates/speechcards_page.mustache
@@ -30,7 +30,7 @@
 
     <div id="wordcards-star-rating">
     </div>
-
+    {{> mod_wordcards/ttrecorder}}
     {{> mod_wordcards/cloudpushrecorder}}
 
     <div style="text-align:center;">
