--- a/templates/speechcards_page.mustache
+++ b/templates/speechcards_page.mustache
@@ -17,24 +17,17 @@
   {{> mod_wordcards/progress_dots}}
 
   <div id="speech-container">
+      <div class="wordcards-poodllspeechcards_box">
 
-    <div id="speechcards_glide" class="glide">
 
-      <div class="glide__wrapper">
-        <ul id="speechcards_thelist" class="glide__track"></ul>
       </div>
-
-      <div class="glide__arrows wordcards-speechcards_toprow"></div>
-
-    </div>
-
     <div id="wordcards-star-rating">
     </div>
     {{> mod_wordcards/ttrecorder}}
     {{> mod_wordcards/cloudpushrecorder}}
 
     <div style="text-align:center;">
-      <button style="border: 2px solid darkgray;border-radius: 5px;" class="center-block btn btn-secondary wordcards-speechcards_button wordcards-speechcards_nextbutton" data-glide-dir=">">
+      <button style="border: 2px solid darkgray;border-radius: 5px;" class="center-block btn btn-secondary wordcards-speechcards_button wordcards-speechcards_nextbutton" >
       <i class="fa fa-times"></i> {{#str}}skip, mod_wordcards{{/str}}
     </button>
     </div>
