tweak background images on activity pages

--- a/templates/vocablist.mustache
+++ b/templates/vocablist.mustache
@@ -10,7 +10,7 @@
   
     <div class="a4e-card a4e-noselect">
 
-      <div style="background-image: url('{{image}}')" class="front">
+      <div style="background-image: url('{{image}}'); background-repeat: no-repeat; background-position: center;" class="front">
         {{definition}}
       </div>
       
