fixed keyboard issue on mobile (double type on android)

--- a/templates/keyboard.mustache
+++ b/templates/keyboard.mustache
@@ -6,7 +6,7 @@
   
   {{#letters}}
   
-  <div class='chunk-key' data-val='{{charcode}}'>
+  <div class='chunk-key' data-val='{{charcode}}' style='cursor: pointer'>
     <div class='chunk-key-inner'>{{{letter}}}</div>
   </div>{{/letters}}
   
