--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -1,3 +1,4 @@
+<link href='css/style.css' rel='stylesheet' type='text/css'>
 {{! Terms are organised as follows:
 <div class="term-wrapper">
    <div class="term">
@@ -10,31 +11,85 @@
 </div>
 }}
 <div id="definitions-page-{{uniqid}}" class="definitions-container">
-   <h3 class="text-center font-weight-bold" style="border-radius:10px;background-color:lightgray;padding:5px;margin-bottom:10px">Check all the words to continue:</h3>
-   <div class="terms clearfix">
-      {{#definitions}}
-      <div class="term-wrapper">
-         <div class="term {{#seen}}term-seen{{/seen}}" data-termid="{{id}}">
-            <div class="term-header">
-               <div class="term-title">{{term}} <i style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}" class="fa fa-volume-up definition-play-tts"></i></div>
-               <div class="term-tick">
-                  <a href="#" class="term-seen-action" title="{{markasseen}}"><img src="{{{notseenurl}}}" alt="{{termnotseen}}" /></a>
-                  <div class="term-seen-state"><img src="{{{seenurl}}}" alt="{{termseen}}" /></div>
-                  <div class="term-seen-loading"><img src="{{loadingurl}}" alt="{{loading}}"></div>
-               </div>
-                {{#model_sentence}}
-                    <div class="term-modelsentence">
-                        <span style="cursor:pointer;" data-modelaudio="{{model_sentence_audio}}" data-tts="{{model_sentence}}" data-ttsvoice="{{ttsvoice}}" class="model-sentence-play-tts"> {{model_sentence}}</span>
-                    </div>
-                {{/model_sentence}}
+<h3 class="text-center font-weight-bold" style="border-radius:10px;background-color:lightgray;padding:5px;margin-bottom:10px">Check all the words to continue: <span  class="event_grid" style="float:right;cursor: pointer;"> <img src="{{definition_flashcards}}" style="width: 40px;height: 38px;" alt="{{definition_flashcards}}"> </span><span class="event_flashcards" style="float:right;cursor: pointer;"><img src="{{definition_grid}}" style="width: 40px;height: 38px;" alt="{{definition_grid}}"></span></h3>
+<div class="terms clearfix definition_grid">
+   {{#definitions}}
+   <div class="term-wrapper">
+      <div class="term {{#seen}}term-seen{{/seen}}" data-termid="{{id}}">
+         <div class="term-header">
+            <div class="term-title">{{term}} <i style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}" class="fa fa-volume-up definition-play-tts"></i></div>
+            <div class="term-tick">
+               <a href="#" class="term-seen-action" title="{{markasseen}}"><img src="{{{notseenurl}}}" alt="{{termnotseen}}" /></a>
+               <div class="term-seen-state"><img src="{{{seenurl}}}" alt="{{termseen}}" /></div>
+               <div class="term-seen-loading"><img src="{{loadingurl}}" alt="{{loading}}"></div>
             </div>
-			<div class="term-body">
-               {{definition}} 
+            {{#model_sentence}}
+            <div class="term-modelsentence">
+               <span style="cursor:pointer;" data-modelaudio="{{model_sentence_audio}}" data-tts="{{model_sentence}}" data-ttsvoice="{{ttsvoice}}" class="model-sentence-play-tts"> {{model_sentence}}</span>
             </div>
-
+            {{/model_sentence}}
+         </div>
+         <div class="term-body">
+            {{definition}} 
          </div>
       </div>
-      {{/definitions}}
+   </div>
+   {{/definitions}}
+</div>
+<div class="terms clearfix definition_flashcards" style="display:none;">
+   <!--start --->
+   <div class="df_fl">
+      <div class="wrapper_pr">
+         <ol class="ProgressBar">
+            {{#definitions}}
+            <li class="ProgressBar-step">
+               <svg class="ProgressBar-icon">
+                  <use xlink:href="#checkmark-bold"/>
+               </svg>
+            </li>
+            {{/definitions}}
+         </ol>
+      </div>
+      <ul class="definition_flashcards_ul">
+         {{#definitions}}
+         <li>
+            <div class="row">
+               {{#image}}
+               <div class="col-md-6">
+                  <img src="{{image}}" style="width:100%" alt=""/>
+               </div>
+               {{/image}}
+               <div class="{{#image}}col-md-6{{/image}} {{^image}}col-md-12{{/image}}">
+                  <div class="term-wrapper" style="width: 100% !important;">
+                     <div class="term {{#seen}}term-seen{{/seen}}" data-termid="{{id}}">
+                        <div class="term-header">
+                           <div class="term-title">{{term}} <i style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}" class="fa fa-volume-up definition-play-tts"></i></div>
+                           <div class="term-tick">
+                              <a href="#" class="term-seen-action" title="{{markasseen}}"><img src="{{{notseenurl}}}" alt="{{termnotseen}}" /></a>
+                              <div class="term-seen-state"><img src="{{{seenurl}}}" alt="{{termseen}}" /></div>
+                              <div class="term-seen-loading"><img src="{{loadingurl}}" alt="{{loading}}"></div>
+                           </div>
+                           {{#model_sentence}}
+                           <div class="term-modelsentence">
+                              <span style="cursor:pointer;" data-modelaudio="{{model_sentence_audio}}" data-tts="{{model_sentence}}" data-ttsvoice="{{ttsvoice}}" class="model-sentence-play-tts"> {{model_sentence}}</span>
+                           </div>
+                           {{/model_sentence}}
+                        </div>
+                        <div class="term-body">
+                           {{definition}} 
+                        </div>
+                     </div>
+                  </div>
+               </div>
+         </li>
+         {{/definitions}}
+      </ul>
+      </div>
+      <div class="df_fl_control">
+         <button id="Prev"  title="Prev"> <i class="text-primary fa fa-angle-double-left" aria-hidden="true"></i> </button>
+         <button id="Next" style="float: right;" title="Next"> <i class="text-primary fa fa-angle-double-right" aria-hidden="true"></i></button>
+      </div>
+      <!--end --->
    </div>
    <div class="page-footer">
       <button data-href="{{{nexturl}}}" data-action="{{nextaction}}" class="definitions-next btn btn-primary btn-lg btn-block">
@@ -44,3 +99,104 @@
       <audio id="poodll_vocabplayer"></audio>
    </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script>
+   $(document).ready(()=>{
+    if(window.matchMedia("(max-width: 767px)").matches){
+    var definition_flashcards_ul = $('.definition_flashcards_ul li').length;
+   $('.wrapper_pr').html('<div class="mb_nav"><span class="curr_level_card">1</span> / <span class="tot_level_card">'+definition_flashcards_ul+'</span></div>');
+   $('.ProgressBar').hide();
+   } 
+   $('.event_grid').click(function(){
+   	$('.definition_flashcards').show();
+   	$('.definition_grid').hide();
+   });
+   $('.event_flashcards').click(function(){
+   	$('.definition_flashcards').hide();
+   	$('.definition_grid').show();
+   });
+   
+   $(".definition_flashcards_ul li:gt(0)").hide();
+    var $bar = $(".ProgressBar");
+     $bar.children("li:first").addClass('is-current');
+    check_prev_level();
+   check_next_level();
+   
+   $('#Next').click(function(){
+   check_prev_level();
+   check_next_level();
+     $('.definition_flashcards_ul > li:first')
+       .slideUp(400)
+       .next()
+       .slideDown(400)
+       .end()
+       .appendTo('.definition_flashcards_ul').slideUp(400);
+   check_prev_level();
+   check_next_level();
+   });
+   
+   $('#Prev').click(function(){
+   check_prev_level();
+   check_next_level();
+     $('.definition_flashcards_ul > li:last')
+       .slideDown(400)
+       .prev()
+       .slideUp(400)
+       .end()
+       .prependTo('.definition_flashcards_ul');
+   $(".definition_flashcards_ul li:gt(0)").slideUp(400);
+   
+   check_prev_level();
+   check_next_level();
+   });
+    
+   $("#Next").on("click", function() {
+   
+   var  curr_level_card = $('.curr_level_card').html();
+   $('.curr_level_card').html(parseInt(curr_level_card)+1);
+   
+     var $bar = $(".ProgressBar");
+     if ($bar.children(".is-current").length > 0) {
+       $bar.children(".is-current").removeClass("is-current").addClass("is-complete").next().addClass("is-current");
+     } else {
+       $bar.children().first().addClass("is-current");
+     }
+   check_prev_level();
+   check_next_level();
+   });
+   
+   $("#Prev").on("click", function() {
+    var  curr_level_card = $('.curr_level_card').html();
+   $('.curr_level_card').html(parseInt(curr_level_card)-1);
+     var $bar = $(".ProgressBar");
+     if ($bar.children(".is-current").length > 0) {
+       $bar.children(".is-current").removeClass("is-current").prev().removeClass("is-complete").addClass("is-current");
+     } else {
+       $bar.children(".is-complete").last().removeClass("is-complete").addClass("is-current");
+     }
+   check_prev_level();
+   check_next_level();
+   });
+   });
+   
+   function check_prev_level(){
+   	 var $bar = $(".ProgressBar");
+   	 if($bar.children("li:first").hasClass('is-current')===true){
+   		$('#Prev').attr('disabled','disabled').addClass('add_opacity_level');
+   		return true;
+   	 } 
+   	 
+   	 $('#Prev').removeAttr('disabled');
+   	 $('#Prev').removeAttr('disabled').removeClass('add_opacity_level');
+   }
+   
+   
+   function check_next_level(){
+   	 var $bar = $(".ProgressBar");
+   	  if($bar.children("li:last").hasClass('is-current')===true){
+   		$('#Next').attr('disabled','disabled').addClass('add_opacity_level');
+     			return true;
+   		} 
+   	 $('#Next').removeAttr('disabled').removeClass('add_opacity_level');
+     }
+</script>
