--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -56,11 +56,11 @@
             <div class="row">
                {{#image}}
                <div class="col-md-6">
-                  <img src="{{image}}" style="width:100%" alt=""/>
+                  <img src="{{image}}" class="flash_img" alt=""/>
                </div>
                {{/image}}
                <div class="{{#image}}col-md-6{{/image}} {{^image}}col-md-12{{/image}}">
-                  <div class="term-wrapper" style="width: 100% !important;">
+                  <div class="term-wrapper {{#image}}add_wraper_handle_im{{/image}} {{^image}}add_wraper_handle{{/image}}">
                      <div class="term {{#seen}}term-seen{{/seen}}" data-termid="{{id}}">
                         <div class="term-header">
                            <div class="term-title">{{term}} <i style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}" class="fa fa-volume-up definition-play-tts"></i></div>
@@ -101,102 +101,106 @@
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script>
-   $(document).ready(()=>{
-    if(window.matchMedia("(max-width: 767px)").matches){
-    var definition_flashcards_ul = $('.definition_flashcards_ul li').length;
-   $('.wrapper_pr').html('<div class="mb_nav"><span class="curr_level_card">1</span> / <span class="tot_level_card">'+definition_flashcards_ul+'</span></div>');
-   $('.ProgressBar').hide();
-   } 
-   $('.event_grid').click(function(){
-   	$('.definition_flashcards').show();
-   	$('.definition_grid').hide();
-   });
-   $('.event_flashcards').click(function(){
-   	$('.definition_flashcards').hide();
-   	$('.definition_grid').show();
-   });
-   
-   $(".definition_flashcards_ul li:gt(0)").hide();
-    var $bar = $(".ProgressBar");
-     $bar.children("li:first").addClass('is-current');
-    check_prev_level();
-   check_next_level();
-   
-   $('#Next').click(function(){
-   check_prev_level();
-   check_next_level();
-     $('.definition_flashcards_ul > li:first')
-       .slideUp(400)
-       .next()
-       .slideDown(400)
-       .end()
-       .appendTo('.definition_flashcards_ul').slideUp(400);
-   check_prev_level();
-   check_next_level();
-   });
-   
-   $('#Prev').click(function(){
-   check_prev_level();
-   check_next_level();
-     $('.definition_flashcards_ul > li:last')
-       .slideDown(400)
-       .prev()
-       .slideUp(400)
-       .end()
-       .prependTo('.definition_flashcards_ul');
-   $(".definition_flashcards_ul li:gt(0)").slideUp(400);
-   
-   check_prev_level();
-   check_next_level();
-   });
-    
-   $("#Next").on("click", function() {
-   
-   var  curr_level_card = $('.curr_level_card').html();
-   $('.curr_level_card').html(parseInt(curr_level_card)+1);
-   
-     var $bar = $(".ProgressBar");
-     if ($bar.children(".is-current").length > 0) {
-       $bar.children(".is-current").removeClass("is-current").addClass("is-complete").next().addClass("is-current");
-     } else {
-       $bar.children().first().addClass("is-current");
-     }
-   check_prev_level();
-   check_next_level();
-   });
-   
-   $("#Prev").on("click", function() {
-    var  curr_level_card = $('.curr_level_card').html();
-   $('.curr_level_card').html(parseInt(curr_level_card)-1);
-     var $bar = $(".ProgressBar");
-     if ($bar.children(".is-current").length > 0) {
-       $bar.children(".is-current").removeClass("is-current").prev().removeClass("is-complete").addClass("is-current");
-     } else {
-       $bar.children(".is-complete").last().removeClass("is-complete").addClass("is-current");
-     }
-   check_prev_level();
-   check_next_level();
-   });
-   });
-   
-   function check_prev_level(){
-   	 var $bar = $(".ProgressBar");
-   	 if($bar.children("li:first").hasClass('is-current')===true){
-   		$('#Prev').attr('disabled','disabled').addClass('add_opacity_level');
-   		return true;
-   	 } 
-   	 
-   	 $('#Prev').removeAttr('disabled');
-   	 $('#Prev').removeAttr('disabled').removeClass('add_opacity_level');
-   }
-   
-   
-   function check_next_level(){
-   	 var $bar = $(".ProgressBar");
-   	  if($bar.children("li:last").hasClass('is-current')===true){
-   		$('#Next').attr('disabled','disabled').addClass('add_opacity_level');
-     			return true;
-   		} 
-   	 $('#Next').removeAttr('disabled').removeClass('add_opacity_level');
-     }
+  $(document).ready(function () {
+	$('.ProgressBar-step').on('click', function () {
+		if ($(this).hasClass("is-current")) {
+			return false;
+		}
+		$('.ProgressBar-step').removeClass("is-current").removeClass('is-complete');
+		$(this).addClass("is-current");
+		var str = $(this).index();
+		if (str > 0) {
+			for (var i = 0; i <= str; i++) {
+				$('.ProgressBar')
+					.find('li:eq(' + i + ')')
+					.addClass('is-complete');
+			}
+		}
+		$('.definition_flashcards_ul li').slideUp(300);
+		$('.definition_flashcards_ul')
+			.find('li:eq(' + str + ')')
+			.slideDown(300);
+		$('.is-current').removeClass('is-complete');
+		check_prev_level();
+		check_next_level();
+
+	});
+	if (window.matchMedia("(max-width: 767px)").matches) {
+
+		var definition_flashcards_ul = $('.definition_flashcards_ul li').length;
+		$('.wrapper_pr').append('<div class="mb_nav"><span class="curr_level_card">1</span> / <span class="tot_level_card">' + definition_flashcards_ul + '</span></div>');
+		$('.ProgressBar').hide();
+	}
+	$('.event_grid').click(function () {
+		$('.definition_flashcards').show();
+		$('.definition_grid').hide();
+	});
+	$('.event_flashcards').click(function () {
+		$('.definition_flashcards').hide();
+		$('.definition_grid').show();
+	});
+
+	$(".definition_flashcards_ul li:gt(0)").hide();
+	var $bar = $(".ProgressBar");
+	$bar.children("li:first").addClass('is-current');
+	check_prev_level();
+	check_next_level();
+
+	$('#Next').click(function () {
+		var cr_index = $(".is-current").index() + 1;
+		$('.definition_flashcards_ul li').slideUp(300);
+		$('.definition_flashcards_ul li:eq(' + cr_index + ')').slideDown(300);
+		var curr_level_card = $('.curr_level_card').html();
+		$('.curr_level_card').html(parseInt(curr_level_card) + 1);
+
+		var $bar = $(".ProgressBar");
+		if ($bar.children(".is-current").length > 0) {
+			$bar.children(".is-current").removeClass("is-current").addClass("is-complete").next().addClass("is-current");
+		} else {
+			$bar.children().first().addClass("is-current");
+		}
+		check_prev_level();
+		check_next_level();
+	});
+
+	$('#Prev').click(function () {
+		var cr_index = $(".is-current").index() - 1;
+		$('.definition_flashcards_ul li').slideUp(300);
+		$('.definition_flashcards_ul li:eq(' + cr_index + ')').slideDown(300);
+		var curr_level_card = $('.curr_level_card').html();
+		$('.curr_level_card').html(parseInt(curr_level_card) - 1);
+		var $bar = $(".ProgressBar");
+		if ($bar.children(".is-current").length > 0) {
+			$bar.children(".is-current").removeClass("is-current").prev().removeClass("is-complete").addClass("is-current");
+		} else {
+			$bar.children(".is-complete").last().removeClass("is-complete").addClass("is-current");
+		}
+		check_prev_level();
+		check_next_level();
+	});
+
+
+});
+
+function check_prev_level() {
+
+	var $bar = $(".ProgressBar");
+	if ($bar.children("li:first").hasClass('is-current') === true) {
+	$('#Prev').attr('disabled', 'disabled').addClass('add_opacity_level');
+		return true;
+	}
+
+	$('#Prev').removeAttr('disabled');
+	$('#Prev').removeAttr('disabled').removeClass('add_opacity_level');
+}
+
+
+function check_next_level() {
+	var $bar = $(".ProgressBar");
+	if ($bar.children("li:last").hasClass('is-current') === true) {
+		$('#Next').attr('disabled', 'disabled').addClass('add_opacity_level');
+		return true;
+	}
+	$('#Next').removeAttr('disabled').removeClass('add_opacity_level');
+}
 </script>
