--- a/styles.css
+++ b/styles.css
@@ -354,10 +354,16 @@
 #wordcards-gameboard {
     margin-top: 20px;
     display: none;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #wordcards-results {
     display: none;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #wordcards-answer-input {
@@ -399,6 +405,11 @@
     align-items: center;
     justify-content: center;
     box-sizing: content-box;
+}
+#wordcards-vocab-list {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .a4e-flashcard-img {
@@ -944,4 +955,11 @@ ul.definition_flashcards_ul {
    cursor: pointer;
    padding: 8px;
 }
- /* flashcards_mode style code */
+.wordcards_importintro {
+    max-width: 1200px;
+    margin: 10px;
+
+}
+.mod_wordcards_center {
+    text-align: center;
+}
