--- a/templates/student_navigation.mustache
+++ b/templates/student_navigation.mustache
@@ -22,7 +22,7 @@
 <div class="student-navigation clearfix">
     {{#tabs}}
         {{^inactive}}
-            <a href="{{url}}" class="student-tab active {{#current}}current{{/current}}">
+            <a href="{{{url}}}" class="student-tab active {{#current}}current{{/current}}">
         {{/inactive}}
         {{#inactive}}
             <div class="student-tab">
