--- a/templates/word_wizard_oneresult.mustache
+++ b/templates/word_wizard_oneresult.mustache
@@ -12,7 +12,7 @@
                 <div class="col-sm mod_wordcards_ww_onesense" id="{{uniqid}}_{{senseindex}}_onesense">
                     <div class="mod_wordcards_ww_sourcedef">{{sourcedefinition}}</div>
                     <span style="display: none" class="mod_wordcards_ww_trans">{{translations}}</span>
-                    <label class="mod_wordcards_ww_label">{{#str}}definition, mod_wordcards {{/str}}</label><input type="text" class="mod_wordcards_ww_def" value="{{definition}}"><br>
+                    <label class="mod_wordcards_ww_label">{{#str}}shortdefinition, mod_wordcards {{/str}}</label><input type="text" class="mod_wordcards_ww_def" value="{{definition}}"><br>
                     <label class="mod_wordcards_ww_label">{{#str}}model, mod_wordcards {{/str}}</label><input type="text" class="mod_wordcards_ww_modelsentence" value="{{modelsentence}}"><br>
                     <button class="mod_wordcards_ww_use {{uniqid}}_usebutton" data-senseindex="{{senseindex}}" type='button'>{{#str}}use, mod_wordcards {{/str}}</button>
                     <button class="mod_wordcards_ww_dismiss {{uniqid}}_dismissbutton" data-senseindex="{{senseindex}}" type='button'>{{#str}}dismiss, mod_wordcards {{/str}}</button>
