--- a/templates/word_wizard_oneresult.mustache
+++ b/templates/word_wizard_oneresult.mustache
@@ -9,7 +9,7 @@
                 </div>
             {{/nosenses}}
             {{#senses}}
-                <div class="col-sm mod_wordcards_ww_onesense" id="{{uniqid}}_{{senseindex}}_onesense">
+                <div class="col-sm-4 mod_wordcards_ww_onesense" id="{{uniqid}}_{{senseindex}}_onesense">
                     <div class="mod_wordcards_ww_sourcedef">{{sourcedefinition}}</div>
                     <span style="display: none" class="mod_wordcards_ww_trans">{{translations}}</span>
                     <label class="mod_wordcards_ww_label">{{#str}}shortdefinition, mod_wordcards {{/str}}</label><input type="text" class="mod_wordcards_ww_def" value="{{definition}}"><br>
